# job-fetcher

./: .env.example  .gitignore  CLAUDE.md  README.md  enrich_ratings.py  main.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: fetch.yml
config/: profile.example.yaml  profile.py  validate.py
deploy/: jobfetcher.service  nginx.conf  pipeline-cron.sh  setup.sh
enricher/: claude_enricher.py
eval/: consistency.py  feedback.py  output_validator.py  regression.py
eval/golden_cases/: 001_perfect_platform_pm.json  002_no_visa_sponsorship.json  003_wrong_function.json  004_logistics_ops_dubai.json  005_too_many_years.json  006_ambiguous_visa.json  007_consumer_product_mismatch.json
fetchers/: jobspy_fetcher.py
fetchers/career_pages/: scraper.py
notifier/: weekly_digest.py
storage/: csv_writer.py  dedup_cache.py  json_writer.py  sheets_writer.py  supabase_writer.py
supabase/: schema.sql
web/: app.py
web/templates/: index.html
